[tool.poetry]
name = "tls-processor"
version = "0.1.0"
description = ""
authors = ["Mike Williamson <mike@korora.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
asyncio-nats-client = "^0.11.4"
python-dotenv = "^0.19.0"
asyncio = "^3.4.3"
python-arango = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
service = "tls_processor:main"
